--- a/MyFirstBrain/nbproject/project.properties
+++ b/MyFirstBrain/nbproject/project.properties
@@ -38,7 +38,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.JWSAntTasks.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
